--- a/style.css
+++ b/style.css
@@ -6,22 +6,46 @@ body{
 }
 section{
     width: 100%;
-    height:100vh;
+    height:600px;
     padding: 100px;
 
 }
 .header{
     background-image: url("images/header-bg.png");
+    position: relative;
+    top: 0;
+	width: 100%;
+	height: 100vh;
+    background-size: cover;
+    margin-bottom: 0;
 }
 .biography{
     background-image: url("images/biography-bg.png");
+    position: relative;
+    top: 0;
+	width: 100%;
+	height: 100vh;
+    background-size: cover;
+    margin-bottom: 0;
 
 }
 .latest-work{
     background-image: url("images/latest-work-bg.png");
+    position: relative;
+    top: 0;
+	width: 100%;
+	height: 100vh;
+    background-size: cover;
+    margin-bottom: 0;
 }
 .footer{
     background-image: url("images/footer-bg.png");
+    position: relative;
+    top: 0;
+	width: 100%;
+	height: 100vh;
+    background-size: cover;
+    margin-bottom: 0;
 }
 .half-width{
     width: 40%;
@@ -36,9 +60,11 @@ section{
 }
 .my-name{
     color: rgb(53, 145, 221);
+    font-size: 100px;
 }
 p{
-    font-size: 20px;
+    
+    font-size: 80px;
 }
 .link-button{
     font-size: 20px;
@@ -69,4 +95,7 @@ p{
 .images{
     height: 300px;
     width: 25%;
+}
+.clients{
+    padding-top: 500px;
 }
