--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ body{
     width: 100%;
     overflow: auto;
 }
-section{
+/*section{
     width: 100%;
     height:600px;
     padding: 100px;
 
-}
+}*/
 .header{
     background-image: url("images/header-bg.png");
     position: relative;
@@ -86,11 +86,11 @@ p{
     text-align: center;
 }
 .div-heading{
-    height: 150px;
+    height: auto;
     font-weight: bold;
     color: rgb(8, 8, 189);
     text-align: center;
-    font-size: 40px;
+    font-size: 60px;
 }
 .images{
     height: 300px;
@@ -99,3 +99,15 @@ p{
 .clients{
     padding-top: 500px;
 }
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+}
+  
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
