--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body{
 p{
     
     font-size: 80px;
+    text-align: justify;
 }
 .link-button{
     font-size: 20px;
@@ -103,3 +104,15 @@ p{
     width: 100%;
     height: 60%;
 }
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+}
+  
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
