--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
 	height: 100vh;
     background-size: cover;
     margin-bottom: 0;
+    font-size: 60px;
 
 }
 .latest-work{
@@ -65,7 +66,7 @@ body{
 p{
     
     font-size: 80px;
-    text-align: justify;
+    
 }
 .link-button{
     font-size: 20px;
@@ -100,7 +101,7 @@ p{
 .clients{
     padding-top: 500px;
 }
-.box{
+/*.box{
     width: 100%;
     height: 60%;
 }
@@ -110,9 +111,39 @@ p{
     padding: 10px;
 }
   
-  /* Clear floats after image containers */
+  /* Clear floats after image containers 
   .row::after {
     content: "";
     clear: both;
     display: table;
+  }  
+  */
+  .sec3 {
+    background: url(images/latest-work-bg.png);
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 80vh;
+    background-size: cover;
+    margin-bottom: 0;
+}
+.sec3 h2 {
+    margin-top: 60px;
+    text-align: center;
+    font-size: 60px;
+    color: rgb(0, 153, 255);
+    font-weight: bold;
+}
+.works-container {
+    margin: 30px 100px;
+}
+.works-container::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  .work {
+      float: left;
+      width: 30%;
+      padding: 10px;
   }
